[package]
name = "void"
version = "0.1.0"
authors = ["Florian <fbuestgens@mailbox.org>"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = "2.18"
xcb = { version = "0.8", features = ["randr"] }
xcb-util = { version = "0.2", features = ["ewmh", "icccm", "keysyms"] }
failure = "0.1.8"

[target.'cfg(target_os = "freebsd")'.dependencies]
capsicum = "0.1.2"

[target.'cfg(target_os = "openbsd")'.dependencies]
pledge = "0.4.1"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
