[package]
name = "void"
version = "0.1.0"
authors = ["Florian <fbuestgens@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.8"
xcb-util = { version = "0.2", features = ["ewmh", "icccm", "keysyms"] }